Version: 2023.6.3

    # Git issue 498: Conditional negative lookahead inside positive lookahead fails to match
    Conditional node needed an additional member that points to the true branch.

Version: 2023.5.5

    Removed semicolon after 'else' in 'munge_name'.

Version: 2023.5.4

    Fixed pyproject.toml and setup.py.

Version: 2023.5.3

    pyproject.toml was missing.

Version: 2023.5.2

    Added pyproject.toml.

Version: 2023.3.23

    Git issue 495: Running time for failing fullmatch increases rapidly with input length
    Re-enabled modified repeat guards due to regression in speed caused by excessive backtracking.

Version: 2023.3.22

    Git issue 494: Backtracking failure matching regex `^a?(a?)b?c\1$` against string `abca`
    Disabled repeat guards. They keep causing issues, and it's just simpler to rely on timeouts.

Version: 2022.10.31

    Updated text for supported Unicode and Python versions.

Version: 2022.9.13

    Updated to Unicode 15.0.0.

Version: 2022.9.11

    Updated version.

Version: 2022.8.17

    Git issue 477: \v for vertical spacing

    Added \p{HorizSpace} (\p{H}) and \p{VertSpace} (\p{V}).

Version: 2022.7.25

    Git issue 475: 2022.7.24 improperly released

    The file https://pypi.org/pypi/regex/2022.7.24/json was missing references to most of the wheels, so this is a new release in the hope that it was just a glitch in GitHub Actions.

Version: 2022.7.24

    Git issue 474: regex has no equivalent to re.Match.groups() for captures

    Added 'allcaptures' and 'allspans' methods to match objects.

    Fixed bug where compiling a pattern didn't always check for unused arguments.

Version: 2022.7.9

    Git issue 473: Emoji classified as letter

    The values for GC:Assigned and GC:LC were flipped.

Version: 2022.6.2

    Git issue 472: Revisit compilation flag to prevent adding a single explicitly compiled regex to the cache

    Added 'cache_pattern' parameter to 'compile' function to improve use of the cache.
